# cppregpattern

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  registry.h  registry_test.cpp  registry_test.h
cmake/: Config.cmake.in
examples/: CMakeLists.txt  base_classes.cpp  base_classes.h  derived_classes.cpp  derived_classes.h  example.cpp
include/cppregpattern/: registry.h
